refactor: DTO 업데이트 및 태그 정보 추가로 인한 DTO 변환 메서드 추가